--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -7,3 +7,7 @@ $background-color: $dark-blue;
 $foreground-color: $mid-dark-blue;
 $border-color: $mid-blue;
 $font-color: $light-blue;
+
+$red: #FF6338;
+$orange: #FF9F1C;
+$green: #7DD36B;
