--- a/src/App.scss
+++ b/src/App.scss
@@ -41,17 +41,23 @@ div {
         display: flex;
         flex-direction: column;
         flex-grow: 1;
+        height: 500px;
       }
 
       & #logs-container {
         flex-grow: 1;
         display: flex;
         flex-direction: column;
+
+        & .content {
+          background-color: $foreground-color;
+          overflow: scroll;
+        }
       }
   }
 
   &#right-container {
-    flex-grow: 0;
+    flex-grow: 0.2;
     display: flex;
     flex-direction: row;
 
@@ -60,6 +66,7 @@ div {
       display: flex;
       flex-direction: column;
       height: 100%;
+      width: 100%;
 
       & .content {
         overflow:scroll;
@@ -87,4 +94,25 @@ div {
     border: none;
   }
 
+}
+
+#logs-table {
+  & tr td {
+    padding: 5px;
+  }
+}
+
+.expose{
+  font-weight: bold;
+  color: $red;
+}
+
+.intercept{
+  font-weight: bold;
+  color: $orange;
+}
+
+.exchange{
+  font-weight: bold;
+  color: $green;
 }
