--- a/src/Player.css
+++ b/src/Player.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: row;
   align-items: stretch;
+  font-size: 1.5rem;
 }
 .player-card .player-card-left {
   flex-grow: 0;
@@ -12,7 +13,7 @@
 .player-card .player-card-left div {
   display: table;
   height: 100%;
-  padding: 4px;
+  padding: 6px;
 }
 .player-card .player-card-left div span {
   display: table-cell;
@@ -20,8 +21,8 @@
   text-align: center;
   border: 1px solid white;
   border-radius: 50%;
-  height: 35px;
-  width: 35px;
+  height: 60px;
+  width: 60px;
   color: #ffffff;
 }
 .player-card .player-card-right {
