--- a/src/App.scss
+++ b/src/App.scss
@@ -40,8 +40,20 @@ div {
       & #map-container {
         display: flex;
         flex-direction: column;
-        flex-grow: 0;
-        height: 500px;
+        //flex-grow: 0;
+        //height: 500px;
+
+        & #map-content {
+          //height: auto;
+          //flex-grow: 0;
+          //display: block;
+          //overflow: visible;
+          border: none;
+        }
+
+        & .content {
+          //flex-grow: 1;
+        }
       }
 
       & #logs-container {
