--- a/src/App.css
+++ b/src/App.css
@@ -71,10 +71,9 @@ div#root {
   height: 100%;
 }
 div#container {
-  padding: 5px;
-  height: 100%;
   display: flex;
   flex-direction: row;
+  height: 100%;
 }
 div#left-container {
   flex-grow: 1;
@@ -84,33 +83,32 @@ div#left-container {
 div#left-container #map-container {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 }
 div#left-container #map-container #map-content {
   border: none;
+  flex-grow: 1;
 }
 div#left-container #logs-container {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
+  flex-grow: 0;
 }
 div#left-container #logs-container .content {
   background-color: #002c4a;
   overflow: scroll;
+  min-height: 50px;
 }
 div#right-container {
-  flex-grow: 0.2;
-  display: flex;
-  flex-direction: row;
-}
-div#right-container #leaderboard-container {
   flex-grow: 0;
   display: flex;
+}
+div#right-container #leaderboard-container {
+  flex-grow: 1;
   flex-direction: column;
-  height: 100%;
-  width: 100%;
+  display: flex;
 }
 div#right-container #leaderboard-container .content {
   overflow: scroll;
+  flex-grow: 1;
 }
 div .title {
   border: 1px solid #00A6EE;
@@ -122,7 +120,6 @@ div .title {
   text-align: center;
 }
 div .content {
-  flex-grow: 1;
   border: 1px solid #00A6EE;
   margin: 5px;
 }
