--- a/src/Map.scss
+++ b/src/Map.scss
@@ -1,11 +1,3 @@
-#map-wrapper {
-  //height: 100%;
-  //width: 100%;
-  //height: auto;
-}
-
 #map {
-  height: 100%;
-  width: 100%;
-  //padding: 30px;
+  overflow: visible;
 }
