--- a/src/App.css
+++ b/src/App.css
@@ -79,27 +79,35 @@ div#left-container {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  overflow: scroll;
+  min-width: 210px;
 }
 div#left-container #map-container {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  flex-grow: 0;
 }
 div#left-container #map-container #map-content {
   border: none;
-  flex-grow: 1;
+  flex-grow: 0;
+  display: inline-block;
+  width: auto;
 }
 div#left-container #logs-container {
-  flex-grow: 0;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 div#left-container #logs-container .content {
   background-color: #002c4a;
   overflow: scroll;
   min-height: 50px;
+  flex-grow: 1;
 }
 div#right-container {
   flex-grow: 0;
   display: flex;
+  min-width: 270px;
 }
 div#right-container #leaderboard-container {
   flex-grow: 1;
