--- a/src/App.scss
+++ b/src/App.scss
@@ -29,7 +29,7 @@ div {
     display: flex;
     flex-direction: row;
     height: 100%;
-    padding: 5px;
+    padding: 20px;
   }
 
   &#left-container {
@@ -38,6 +38,7 @@ div {
     flex-direction: column;
     overflow: scroll;
     min-width: 210px;
+    margin-right: 10px;
 
       & #map-container {
         display: flex;
@@ -49,16 +50,11 @@ div {
           flex-grow: 0;
           display: inline-block;
           width: auto;
-          //border: 1px solid red;
-
-          & #map-wrapper {
-            //display: inline-block;
-            //width: auto;
-          }
         }
       }
 
       & #logs-container {
+        margin-top: 10px;
         flex-grow: 1;
         display: flex;
         flex-direction: column;
@@ -76,6 +72,7 @@ div {
     flex-grow: 0;
     display: flex;
     min-width: 270px;
+    flex-direction: column;
 
     & #leaderboard-container {
       flex-grow: 1;
@@ -85,6 +82,19 @@ div {
       & .content {
         overflow: scroll;
         flex-grow: 1;
+      }
+    }
+
+    & #countdown-container {
+      //border: 1px solid $border-color;
+      margin: 5px;
+      padding: 5px;
+      font-size: 7em;
+      text-align: center;
+      //color: $border-color;
+
+      & .red {
+        color: $red;
       }
     }
   }
@@ -129,4 +139,31 @@ div {
 .exchange{
   font-weight: bold;
   color: $green;
+}
+
+@keyframes pulseAnimation {
+  0%   { opacity:0; }
+  50%  { opacity:1; }
+  100% { opacity:0; }
+}
+@-o-keyframes pulseAnimation{
+  0%   { opacity:0; }
+  50%  { opacity:1; }
+  100% { opacity:0; }
+}
+@-moz-keyframes pulseAnimation{
+  0%   { opacity:0; }
+  50%  { opacity:1; }
+  100% { opacity:0; }
+}
+@-webkit-keyframes pulseAnimation{
+  0%   { opacity:0; }
+  50%  { opacity:1; }
+  100% { opacity:0; }
+}
+.pulse {
+  -webkit-animation: pulseAnimation 1s infinite;
+     -moz-animation: pulseAnimation 1s infinite;
+       -o-animation: pulseAnimation 1s infinite;
+          animation: pulseAnimation 1s infinite;
 }
