Added flags to logs

--- a/src/App.css
+++ b/src/App.css
@@ -149,7 +149,9 @@ div .no-border {
 }
 
 #logs-table tr td {
-  padding: 5px;
+  padding: 5px 10px;
+  vertical-align: middle;
+  font-size: 1.4em;
 }
 
 .expose {
