--- a/src/App.css
+++ b/src/App.css
@@ -80,9 +80,9 @@ div#left-container {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
   min-width: 210px;
   margin-right: 10px;
+  height: 100%;
 }
 div#left-container #map-container {
   display: flex;
@@ -100,12 +100,13 @@ div#left-container #logs-container {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 div#left-container #logs-container .content {
   background-color: #002c4a;
-  overflow: scroll;
   min-height: 50px;
   flex-grow: 1;
+  overflow: scroll;
 }
 div#right-container {
   flex-grow: 0;
