--- a/src/App.scss
+++ b/src/App.scss
@@ -36,9 +36,9 @@ div {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
     min-width: 210px;
     margin-right: 10px;
+    height: 100%;
 
       & #map-container {
         display: flex;
@@ -58,12 +58,13 @@ div {
         flex-grow: 1;
         display: flex;
         flex-direction: column;
+        overflow: hidden;
 
         & .content {
           background-color: $foreground-color;
-          overflow: scroll;
           min-height: 50px;
           flex-grow: 1;
+          overflow: scroll;
         }
       }
   }
