--- a/src/App.scss
+++ b/src/App.scss
@@ -74,11 +74,13 @@ div {
     display: flex;
     min-width: 270px;
     flex-direction: column;
+    height: 100%;
 
     & #leaderboard-container {
       flex-grow: 1;
       flex-direction: column;
       display: flex;
+      overflow: scroll;
 
       & .content {
         overflow: scroll;
@@ -96,6 +98,10 @@ div {
 
       & .red {
         color: $red;
+      }
+
+      & #countdown-message {
+        font-size: 0.3em;
       }
     }
   }
