--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -5,7 +5,7 @@ $light-blue: #9FC5E8;
 
 $background-color: $dark-blue;
 $foreground-color: $mid-dark-blue;
-$border-color: $mid-blue;
+$border-color: $light-blue;
 $font-color: $light-blue;
 
 $red: #FF6338;
