--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,7 @@ div#right-container #countdown-container #countdown-message {
   font-size: 0.25em;
 }
 div .title {
-  border: 1px solid #00A6EE;
+  border: 1px solid #9FC5E8;
   width: 200px;
   margin: 5px;
   padding: 10px;
@@ -147,7 +147,7 @@ div .title {
   text-align: center;
 }
 div .content {
-  border: 1px solid #00A6EE;
+  border: 1px solid #9FC5E8;
   margin: 5px;
 }
 div .no-border {
