--- a/src/Player.css
+++ b/src/Player.css
@@ -1,6 +1,6 @@
 .player-card {
   border: 1px solid #9FC5E8;
-  background-color: #002c4a;
+  background-color: #053759;
   margin-bottom: 10px;
   display: flex;
   flex-direction: row;
@@ -35,14 +35,14 @@
   flex-grow: 1;
 }
 .player-card .player-card-right .player-name-container .player-name-border {
-  background: linear-gradient(to right, #002c4a, #9FC5E8);
+  background: linear-gradient(to right, #053759, #9FC5E8);
   padding-bottom: 1px;
   height: 100%;
   display: table;
   width: 100%;
 }
 .player-card .player-card-right .player-name-container .player-name-border .player-name {
-  background-color: #002c4a;
+  background-color: #053759;
   height: 100%;
   display: table-cell;
   vertical-align: middle;
