--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,7 +1,7 @@
 $dark-blue: #001C31;
-$mid-dark-blue: #053759;
+$mid-dark-blue: #0C4870;
 $mid-blue: #00A6EE;
-$light-blue: #9FC5E8;
+$light-blue: #C9E5FF;
 
 $background-color: $dark-blue;
 $foreground-color: $mid-dark-blue;
