--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -8,6 +8,6 @@ $foreground-color: $mid-dark-blue;
 $border-color: $light-blue;
 $font-color: $light-blue;
 
-$red: #FF6338;
+$red: #FF6A56;
 $orange: #FF9F1C;
 $green: #77D365;
